.clusters/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grodt
  namespace: default
  labels:
    app: grodt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grodt
  template:
    metadata:
      labels:
        app: grodt
    spec:
      containers:
      - name: grodt
        image: grodt/app:3.26.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /version/app
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
