.clusters/production/eventstoredb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventstoredb
  namespace: eventstoredb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventstoredb
  template:
    metadata:
      labels:
        app: eventstoredb
    spec:
      containers:
      - name: eventstoredb
        image: eventstore/eventstore:24.2.0-jammy
        ports:
        - containerPort: 2113
        - containerPort: 1113
        volumeMounts:
        - name: eventstoredb-data
          mountPath: /var/lib/eventstore
        - name: eventstoredb-config
          mountPath: /etc/eventstore
        args: ["--config=/etc/eventstore/eventstoredb.conf"]
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
      volumes:
      - name: eventstoredb-data
        persistentVolumeClaim:
          claimName: eventstoredb-data
      - name: eventstoredb-config
        configMap:
          name: eventstoredb-config
