.clusters/production/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grodt-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/vultr-loadbalancer-protocol: "http"
  labels:
    app: grodt
spec:
  type: LoadBalancer
  selector:
    app: grodt
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: 50051
