.clusters/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grodt
  namespace: default
spec:
  selector:
    app: grodt
  ports:
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
